# sqaod

./: .gitignore  LICENSE  Makefile.am  README.md  build.sh  build_deb.sh  build_lib.sh  build_py.sh  clone_3rdparty.sh  configure.ac  gpgkey  index.html  uninstall.sh
VS/: sqaod.sln  sqaod_cext.sln  sqaodc.sln  sqaodpy_cext.sln
aptly/: alias.sh  apt_publish.sh  apt_publish_drop.sh  aptly.conf  build_aptly.sh  memo.txt
debian/: changelog  changelog.tmpl  control  control.gen.in  copyright  (+8 more)
libsqaod/: .gitignore  Makefile.am  autogen.sh  configure.ac
libsqaod/common/: Array.h  Common.cpp  Common.h  EigenBridge.h  Makefile.am  Matrix.cpp  Matrix.h  Preference.cpp  Preference.h  Random.cpp  Solver.cpp  Solver.h  UniformOp.h  defines.cpp  defines.h  types.h  undef.h
libsqaod/cpu/: CPUBipartiteGraphAnnealer.cpp  CPUBipartiteGraphAnnealer.h  CPUBipartiteGraphBFSearcher.cpp  CPUBipartiteGraphBFSearcher.h  CPUBipartiteGraphBFSolver.cpp  CPUBipartiteGraphBFSolver.h  CPUBipartiteGraphBatchSearch.cpp  CPUBipartiteGraphBatchSearch.h  CPUDenseGraphAnnealer.cpp  CPUDenseGraphAnnealer.h  CPUDenseGraphBFSearcher.cpp  CPUDenseGraphBFSearcher.h  CPUDenseGraphBFSolver.cpp  CPUDenseGraphBFSolver.h  CPUDenseGraphBatchSearch.cpp  CPUDenseGraphBatchSearch.h  CPUFormulas.cpp  CPUFormulas.h  CPUObjectPrep.h  CPURandom.cpp  CPURandom.h  Makefile.am  Random.cpp  Random.h  Traits.cpp  Traits.h
libsqaod/cuda/: Assertion.h  CUDABipartiteGraphAnnealer.cu  CUDABipartiteGraphAnnealer.h  CUDABipartiteGraphBFSearcher.cpp  CUDABipartiteGraphBFSearcher.h  CUDABipartiteGraphBFSolver.cpp  CUDABipartiteGraphBFSolver.h  CUDADenseGraphAnnealer.cu  CUDADenseGraphAnnealer.h  CUDADenseGraphBFSearcher.cpp  CUDADenseGraphBFSearcher.h  CUDADenseGraphBFSolver.cpp  CUDADenseGraphBFSolver.h  CUDAFormulas.cpp  CUDAFormulas.h  Device.cpp  Device.h  DeviceAlgorithm.cu  DeviceAlgorithm.h  DeviceArray.h  DeviceBFKernels.cu  DeviceBFKernels.h  DeviceBipartiteGraphBatchSearch.cpp  DeviceBipartiteGraphBatchSearch.cu  DeviceBipartiteGraphBatchSearch.h  DeviceConstScalars.cpp  DeviceConstScalars.h  DeviceCopy.cpp  DeviceCopy.cu  DeviceCopy.h  DeviceDenseGraphBatchSearch.cpp  DeviceDenseGraphBatchSearch.cu  DeviceDenseGraphBatchSearch.h  DeviceFormulas.cpp  DeviceFormulas.h  DeviceKernels.cu  DeviceKernels.h  DeviceMath.cpp  DeviceMath.h  DeviceMathKernel.cu  (+29 more)
libsqaod/include/: pyglue.h
libsqaod/tests/: CUDADenseGraphAnnealerTest.cpp  CUDADenseGraphAnnealerTest.h  CUDADenseGraphBFSolverTest.cpp  CUDADenseGraphBFSolverTest.h  CUDAFormulasBGFuncTest.cpp  CUDAFormulasBGFuncTest.h  CUDAFormulasDGFuncTest.cpp  DeviceMathTest.cpp  DeviceMathTest.h  DeviceRandomTest.cpp  DeviceSegmentedSumTest.cpp  DeviceSegmentedSumTest.cu  DeviceSegmentedSumTest.h  DeviceTest.cpp  DeviceTest.h  Makefile.am  MinimalTestSuite.cpp  MinimalTestSuite.h  Test.h  main.cpp  perf.cpp  utils.cpp  utils.h
sqaodc/: .gitignore  Makefile.am  configure.ac  sqaodc.h  sqaodc_native.h
sqaodc/common/: Array.h  Common.cpp  Common.h  EigenBridge.h  Formulas.h  Makefile.am  Matrix.cpp  Matrix.h  Preference.cpp  Preference.h  Random.cpp  Random.h  ShapeChecker.h  Solver.cpp  Solver.h  UniformOp.cpp  UniformOp.h  defines.cpp  defines.h  os_dependent.h  os_dependent_linux.cpp  os_dependent_windows.cpp  types.h
sqaodc/common/internal/: ParallelWorkDistributor.h  ParallelWorkDistributor_Lock.h  ParallelWorkDistributor_LockFree.h  ParallelWorkDistributor_cpp.h  ParallelWorkDistributor_linux.h  ParallelWorkDistributor_omp.h  RangeMap.h  ShapeChecker.h
sqaodc/config/: sqaod_config.h.in
sqaodc/cpu/: CPUBipartiteGraphAnnealer.cpp  CPUBipartiteGraphAnnealer.h  CPUBipartiteGraphBFSearcher.cpp  CPUBipartiteGraphBFSearcher.h  CPUBipartiteGraphBatchSearch.cpp  CPUBipartiteGraphBatchSearch.h  CPUDenseGraphAnnealer.cpp  CPUDenseGraphAnnealer.h  CPUDenseGraphBFSearcher.cpp  CPUDenseGraphBFSearcher.h  CPUDenseGraphBatchSearch.cpp  CPUDenseGraphBatchSearch.h  CPUFormulas.cpp  CPUFormulas.h  CPUObjectPrep.h  Dot_SIMD.cpp  Dot_SIMD.h  Makefile.am  SharedFormulas.cpp  SharedFormulas.h  api_cpu.cpp  cpu_export.h
sqaodc/cuda/: Assertion.h  CUDABipartiteGraphAnnealer.cu  CUDABipartiteGraphAnnealer.h  CUDABipartiteGraphBFSearcher.cpp  CUDABipartiteGraphBFSearcher.h  CUDADenseGraphAnnealer.cu  CUDADenseGraphAnnealer.h  CUDADenseGraphBFSearcher.cpp  CUDADenseGraphBFSearcher.h  CUDAFormulas.cpp  CUDAFormulas.h  Device.h  DeviceArray.h  DeviceBatchedDot.cuh  DeviceBatchedDot2.cuh  DeviceBipartiteGraphBatchSearch.cu  DeviceBipartiteGraphBatchSearch.h  DeviceConstScalars.cpp  DeviceConstScalars.h  DeviceCopy.h  DeviceDenseGraphBatchSearch.cu  DeviceDenseGraphBatchSearch.h  DeviceFormulas.cpp  DeviceFormulas.h  DeviceKernels.cu  DeviceKernels.h  DeviceMath.cpp  DeviceMath.h  DeviceMatrix.h  DeviceMemoryStore.cpp  DeviceMemoryStore.h  DeviceObjectAllocator.cpp  DeviceObjectAllocator.h  DeviceRandom.cu  DeviceRandom.cuh  DeviceRandom.h  DeviceRandomBuffer.cu  DeviceRandomBuffer.h  DeviceRandomMT19937.cpp  DeviceRandomMT19937.h  (+17 more)
sqaodc/cuda/saved/: DeviceSegmentedSum.cpp  DeviceSegmentedSum.h
sqaodc/pyglue/: annealer.inc  bf_searcher.inc  formulas.inc  pyglue.h
sqaodc/tests/: BFSearcherRangeCoverageTest.cpp  BFSearcherRangeCoverageTest.h  CPUBipartiteGraphAnnealer.cpp  CPUBipartiteGraphAnnealerTest.cpp  CPUBipartiteGraphAnnealerTest.h  CPUDenseGraphAnnealerTest.cpp  CPUDenseGraphAnnealerTest.h  CUDABipartiteGraphAnnealerTest.cpp  CUDABipartiteGraphAnnealerTest.h  CUDADenseGraphAnnealerTest.cpp  CUDADenseGraphAnnealerTest.h  CUDADenseGraphBFSolverTest.cpp  CUDADenseGraphBFSolverTest.h  CUDAFormulasBGFuncTest.cpp  CUDAFormulasDGFuncTest.cpp  CUDAFormulasDGFuncTest.h  DeviceMathTest.cpp  DeviceRandomTest.h  DeviceSegmentedSumTest.cu  DeviceSegmentedSumTest.h  DeviceTest.cpp  DeviceTest.h  DeviceTransform2dTest.cu  DeviceTransform2dTest.h  Makefile.am  MinimalTestSuite.cpp  MinimalTestSuite.h  Test.cpp  dotval.cpp  main.cpp  perf.cpp  utils.cpp  utils.h
src/: configure.ac
src/cpu/: CPUDenseGraphAnnealer.h  CPUDenseGraphBFSolver.cpp  CPUDenseGraphBFSolver.h  Makefile.am  Traits.cpp  Traits.h
(+440 files in other folders)
