
noinst_LTLIBRARIES=libcpu.la

AM_CPPFLAGS=-I$(top_srcdir) -I$(top_srcdir)/sqaodc -I$(top_srcdir)/3rdparty/eigen

libcpu_la_SOURCES=CPUFormulas.cpp CPUDenseGraphBFSearcher.cpp CPUDenseGraphBatchSearch.cpp CPUDenseGraphAnnealer.cpp CPUBipartiteGraphBFSearcher.cpp CPUBipartiteGraphBatchSearch.cpp CPUBipartiteGraphAnnealer.cpp SharedFormulas.cpp api_cpu.cpp
