SUFFICES=.cu .cpp .h

LDADD=
LIBS=
AM_CPPFLAGS=-I$(top_srcdir) -I$(top_srcdir)/sqaodc -I$(top_srcdir)/3rdparty/eigen -I$(top_srcdir)/3rdparty/cub

check_PROGRAMS=perf test
perf_SOURCES=perf.cpp
test_SOURCES=main.cpp BFSearcherRangeCoverageTest.cpp MinimalTestSuite.cpp 

LDADD+=$(top_builddir)/sqaodc/cpu/libcpu.la $(top_builddir)/sqaodc/common/libcommon.la
if WITH_BLAS
  LIBS+=-lblas
endif

run: $(check_PROGRAMS)
	./test


# test for CUDA
if CUDA_ENABLED

test_SOURCES+=CUDAFormulasBGFuncTest.cpp CUDAFormulasDGFuncTest.cpp DeviceRandomTest.cpp CUDADenseGraphBFSolverTest.cpp DeviceSegmentedSumTest.cu CUDADenseGraphAnnealerTest.cpp utils.cpp DeviceMathTest.cpp DeviceTest.cpp

LDADD+=$(top_builddir)/sqaodc/cuda/libcuda.la
LIBS+=-L/usr/local/cuda/lib64 -lcublas -lcudart -ldl


# CUDA build rules

# include ./$(DEPDIR)/DeviceSegmentedSumTest.Po

.cu.o:  # generate dep, and compile
	@mkdir -p $(DEPDIR)
	$(NVCC) -M -std=c++11 $(NVCCFLAGS) -Xcompiler "$(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)" $<  -o $(DEPDIR)/$*.Tpo
	$(NVCC) -c -std=c++11 $(NVCCFLAGS) -Xcompiler "$(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)"  $<  -o $*.o
	sed s/$*.o/$*.lo/ $(DEPDIR)/$*.Tpo > $(DEPDIR)/$*.Po
	rm -f $(DEPDIR)/$*.Tpo

# .cu.lo:
# 	mkdir -p .libs
# 	$(NVCC) -M -std=c++11 -arch=sm_61 -Xcompiler "$(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)" $<  -o $(DEPDIR)/$*.Tpo  # generate dep
# 	$(NVCC) -c -std=c++11 -arch=sm_61 -Xcompiler "$(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)"  $<  -o .libs/$*.o  # compile
# 	@echo "# Generated by libtool :  .lo file for CUDA objects." > $@
# 	@echo "pic_object='.libs/$*.o'" >> $@
# 	@echo "non_pic_object=none" >> $@ # FIXME: add static ver.
# 	sed s/$*.o/$*.lo/ $(DEPDIR)/$*.Tpo > $(DEPDIR)/$*.Plo
# 	rm -f $(DEPDIR)/$*.Tpo

%.Plo:
	touch $@
%.Po:
	touch $@

endif
